Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96376

Recording fails when encoding audio to other codecs other than AAC, WAV, or ALAC

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.0, 6.2.1, 6.3.0 Alpha
    • 6.2.0 Beta4
    • Multimedia
    • None
    • iOS/tvOS/watchOS, macOS
    • 4241af760259211cc52b6817b3a28c4dbf450dbf (qt/qtmultimedia/dev) 0d9475d0ba05b49afe98000ed83cb4f25a804a25 (qt/qtmultimedia/6.2) 21475678b7532e30979df28576f32584b2d21bef (qt/qtmultimedia/6.2.0)

    Description

      Reproducible with the camera example, when changing the recorder settings to an audio codec other than AAC, ALAC, or WAV.

      Attachments

        For Gerrit Dashboard: QTBUG-96376
        # Subject Branch Project Status CR V

        Activity

          People

            dorisverria Doris Verria
            dorisverria Doris Verria
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes