QDarwinFormatInfo: Remove unsupported audio codecs for encoding

From the Apple docs, AVFoundation can only support encoding to AAC,
ALAC, and WAV from our list of codecs. Remove the rest of the audio
codecs from the list of encoders.

Fixes: QTBUG-96376
Pick-to: 6.2.0 6.2
Change-Id: I4ceba470f5267212dd7088a15cc311ff2d07512f
Reviewed-by: Lars Knoll <lars.knoll@qt.io>